compiler/lyra/src/test/resources/semantic_errors/ImplementSelf.ly
interface A extends A {

}

class Application {
    def main { }
}